<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>stomp_moveit</name>
  <version>0.0.1</version>
  <description>STOMP for MoveIt</description>
  <author email="henningkayser@picknik.ai">Henning Kayser</author>
  <maintainer email="henningkayser@picknik.ai">Henning Kayser</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>stomp</depend>
  <depend>moveit_core</depend>
  <depend>moveit_ros</depend>
  <depend>moveit_visual_tools</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
