<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>moveit_configs_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="cafer.abdi@gmail.com">jafar_abdi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>parameter_builder</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
